--- a/src/app/pages/invoice/list-invoice/list-invoice.component.html
+++ b/src/app/pages/invoice/list-invoice/list-invoice.component.html
@@ -1,1 +1,68 @@
-<p>list-invoice works!</p>
+<div class="mt-4">
+    <div class="table-responsive mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold" style="max-width: fit-content;">
+                    Khách hàng
+                </th>
+                <td mat-cell *matCellDef="let invoice" class="text-truncate">
+                    {{ invoice.name }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="phone">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold" style="max-width: fit-content;">
+                    SĐT
+                </th>
+                <td mat-cell *matCellDef="let invoice" class="text-truncate">
+                    {{ invoice.phoneNumber }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="address">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Địa chỉ </th>
+                <td mat-cell *matCellDef="let invoice" class="text-truncate" style="max-width: 200px;"
+                    title="{{ invoice.address }}">
+                    {{ invoice.address }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="createdDate">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold" style="max-width: fit-content;">
+                    Ngày tạo
+                </th>
+                <td mat-cell *matCellDef="let invoice" class="text-truncate">
+                    {{ invoice.createdDate }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="totalPrice">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold" style="max-width: fit-content;">
+                    Tổng tiền
+                </th>
+                <td mat-cell *matCellDef="let invoice" class="text-truncate">
+                    {{ invoice.totalPrice }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="details">
+                <th mat-header-cell *matHeaderCellDef class="fw-bold">Chi tiết</th>
+                <td mat-cell *matCellDef="let order">
+                    <button mat-icon-button color="primary" title="Xem chi tiết đơn hàng"
+                        (click)="openOrderDetails(order)">
+                        <mat-icon>visibility</mat-icon>
+                    </button>
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+    </div>
+
+    <mat-paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 20, 50]" showFirstLastButtons
+        aria-label="Select page of periodic elements">
+    </mat-paginator>
+
+    <app-loading-dots [isLoading]="isLoading"></app-loading-dots>
+</div>
