--- a/src/app/pages/order/list-order/list-order.component.html
+++ b/src/app/pages/order/list-order/list-order.component.html
@@ -1,4 +1,21 @@
 <div class="mt-4">
+    <div class="d-flex">
+        <mat-form-field class="me-2">
+            <input matInput (keyup)="filterChange($event)" placeholder="Nhập dữ liệu cần tìm ...">
+        </mat-form-field>
+        <mat-form-field>
+            <mat-label>Status</mat-label>
+            <mat-select (selectionChange)="selectChange($event)">
+                <mat-option>-- None --</mat-option>
+                <mat-option value="pending">PENDING</mat-option>
+                <mat-option value="accepted">ACCEPTED</mat-option>
+                <mat-option value="denied">DENIED</mat-option>
+                <mat-option value="delivering">DELIVERING</mat-option>
+                <mat-option value="completed">COMPLETED</mat-option>
+            </mat-select>
+        </mat-form-field>
+    </div>
+
     <div class="table-responsive mat-elevation-z8">
         <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
 
@@ -132,6 +149,6 @@
     <mat-paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 20, 50]" showFirstLastButtons
         aria-label="Select page of periodic elements">
     </mat-paginator>
-    
+
     <app-loading-dots [isLoading]="isLoading"></app-loading-dots>
 </div>
