--- a/src/app/pages/invoice/list-invoice/list-invoice.component.html
+++ b/src/app/pages/invoice/list-invoice/list-invoice.component.html
@@ -1,20 +1,65 @@
 <div class="mt-4">
-    <div>
-        <mat-card-header>
-            <mat-form-field>
-                <input matInput (keyup)="filterChange($event)" placeholder="Nhập dữ liệu cần tìm ...">
-            </mat-form-field>
-        </mat-card-header>
+    <div class="d-flex justify-content-between">
+        <div class="mb-2">
+            <div>
+                <mat-radio-group [(ngModel)]="filterType">
+                    <mat-radio-button value="date">Lọc theo ngày cụ thể</mat-radio-button>
+                    <mat-radio-button value="dateRange">Lọc theo khoảng ngày</mat-radio-button>
+                </mat-radio-group>
+            </div>
 
-        <button class="float-end" mat-button color="primary" (click)="exportToExcel()">
-            <mat-icon>file_download</mat-icon>
-            Export to Excel
-        </button>
+            <mat-form-field *ngIf="filterType === 'date'">
+                <mat-label>Chọn ngày</mat-label>
+                <input matInput [matDatepicker]="startDatePicker" [(ngModel)]="date"
+                    (dateChange)="filterDateChange()" />
+                <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
+                <mat-datepicker #startDatePicker></mat-datepicker>
+            </mat-form-field>
+
+            <div *ngIf="filterType === 'dateRange'">
+                <mat-form-field class="me-2">
+                    <mat-label>Start Date:</mat-label>
+                    <input matInput [matDatepicker]="startDatePicker" [(ngModel)]="startDate"
+                        (dateChange)="filterDateRangeChange()" />
+                    <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
+                    <mat-datepicker #startDatePicker></mat-datepicker>
+                </mat-form-field>
+
+                <mat-form-field>
+                    <mat-label>End Date:</mat-label>
+                    <input matInput [matDatepicker]="endDatePicker" [(ngModel)]="endDate"
+                        (dateChange)="filterDateRangeChange()" />
+                    <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
+                    <mat-datepicker #endDatePicker></mat-datepicker>
+                </mat-form-field>
+            </div>
+        </div>
+
+        <div>
+            <button class="float-end" mat-button color="primary" (click)="exportToExcel()">
+                <mat-icon>file_download</mat-icon>
+                Export to Excel
+            </button>
+            <mat-card-header>
+                <mat-form-field>
+                    <input matInput (keyup)="filterChange($event)" placeholder="Nhập dữ liệu cần tìm ...">
+                </mat-form-field>
+            </mat-card-header>
+        </div>
     </div>
     <div class="table-responsive mat-elevation-z8">
         <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
+            <ng-container matColumnDef="key">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold">
+                    Mã
+                </th>
+                <td mat-cell *matCellDef="let invoice" class="text-truncate">
+                    {{ invoice.key }}
+                </td>
+            </ng-container>
+
             <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold" style="max-width: fit-content;">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold">
                     Khách hàng
                 </th>
                 <td mat-cell *matCellDef="let invoice" class="text-truncate">
@@ -23,7 +68,7 @@
             </ng-container>
 
             <ng-container matColumnDef="phone">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold" style="max-width: fit-content;">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold">
                     SĐT
                 </th>
                 <td mat-cell *matCellDef="let invoice" class="text-truncate">
@@ -33,14 +78,13 @@
 
             <ng-container matColumnDef="address">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Địa chỉ </th>
-                <td mat-cell *matCellDef="let invoice" class="text-truncate" style="max-width: 200px;"
-                    title="{{ invoice.address }}">
+                <td mat-cell *matCellDef="let invoice" class="text-truncate" title="{{ invoice.address }}">
                     {{ invoice.address }}
                 </td>
             </ng-container>
 
             <ng-container matColumnDef="createdDate">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold" style="max-width: fit-content;">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold">
                     Ngày tạo
                 </th>
                 <td mat-cell *matCellDef="let invoice" class="text-truncate">
@@ -49,7 +93,7 @@
             </ng-container>
 
             <ng-container matColumnDef="totalPrice">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold" style="max-width: fit-content;">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold">
                     Tổng tiền
                 </th>
                 <td mat-cell *matCellDef="let invoice" class="text-truncate">
