--- a/src/app/pages/dashboard/dash-analytics/dash-analytics.component.html
+++ b/src/app/pages/dashboard/dash-analytics/dash-analytics.component.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="col-xl-12 col-md-12">
-        <app-card cardTitle="Doanh thu theo từng ngày" [options]="false">
+        <app-card cardTitle="Doanh thu từng ngày trong tháng hiện tại" [options]="false">
             <div class="chart-container">
                 <apx-chart [chart]="chartOptions.chart" [series]="chartOptions.series"
                     [xaxis]="chartOptions.xaxis"></apx-chart>
@@ -42,7 +42,7 @@
     </div>
 
     <div class="row justify-content-center">
-        <div class="col-md-6 col-lg-4">
+        <div class="col-md-6 col-lg-6">
             <app-card [hidHeader]="true" blockClass="text-center">
                 <i class="fa fa-shopping-basket text-c-blue d-block f-40"></i>
                 <h4 class="m-t-20">Danh sách<span class="text-c-blue"> Sản phẩm</span></h4>
@@ -51,7 +51,7 @@
             </app-card>
         </div>
 
-        <div class="col-md-6 col-lg-4">
+        <div class="col-md-6 col-lg-6">
             <app-card [hidHeader]="true" blockClass="text-center">
                 <i class="fas fa-shopping-cart text-c-green d-block f-40"></i>
                 <h4 class="m-t-20"><span class="text-c-green">Đơn hàng</span> Mới</h4>
