xuất file excel theo tháng trong năm

--- a/src/app/pages/chart/chart.component.html
+++ b/src/app/pages/chart/chart.component.html
@@ -39,7 +39,7 @@
     </div>
 </div>
 
-<button *ngIf="radioBtn === '3'" mat-button color="primary" (click)="exportToExcel()">
+<button mat-button color="primary" (click)="exportRevenueToExcel()">
     <mat-icon>file_download</mat-icon>
     Export to Excel
 </button>
