--- a/src/app/pages/food/add-food/add-food.component.html
+++ b/src/app/pages/food/add-food/add-food.component.html
@@ -153,14 +153,6 @@
 
         <div class="row mb-2">
             <mat-form-field class="col">
-                <mat-label>Loại sản phẩm</mat-label>
-                <input matInput formControlName="foodType">
-                <mat-error *ngIf="foodType?.errors?.['required']">
-                    Loại sản phẩm là <strong>bắt buộc</strong>
-                </mat-error>
-            </mat-form-field>
-
-            <mat-form-field class="col">
                 <mat-label>Giá sản phẩm</mat-label>
                 <input matInput type="number" formControlName="foodPrice">
                 <mat-error *ngIf="foodPrice?.errors?.['required']">
@@ -168,6 +160,18 @@
                 </mat-error>
                 <mat-error *ngIf="foodPrice?.errors?.['pattern']">
                     Định dạng giá không hợp lệ
+                </mat-error>
+            </mat-form-field>
+            
+            <mat-form-field class="col">
+                <mat-label>Loại sản phẩm</mat-label>
+                <mat-select name="foodType" formControlName="foodType">
+                    <mat-option *ngFor="let item of listType" [value]="item">
+                        {{ item }}
+                    </mat-option>
+                </mat-select>
+                <mat-error *ngIf="foodType?.errors?.['required']">
+                    Loại sản phẩm là <strong>bắt buộc</strong>
                 </mat-error>
             </mat-form-field>
         </div>
