--- a/src/app/pages/chart/chart.component.html
+++ b/src/app/pages/chart/chart.component.html
@@ -45,5 +45,6 @@
 </button>
 
 <div class="chart-container" *ngIf="chartOptions">
-    <apx-chart [chart]="chartOptions.chart" [series]="chartOptions.series" [xaxis]="chartOptions.xaxis"></apx-chart>
+    <apx-chart [chart]="chartOptions.chart" [series]="chartOptions.series" [xaxis]="chartOptions.xaxis">
+    </apx-chart>
 </div>
