fix đăng ký cửa hàng

--- a/src/app/pages/shop/register-shop/register-shop.component.html
+++ b/src/app/pages/shop/register-shop/register-shop.component.html
@@ -1,4 +1,4 @@
-<div class="auth-wrapper" *ngIf="!authService.isRegisterShop; else noRegister">
+<div class="auth-wrapper" *ngIf="!isRegisterShop">
     <div class="auth-content">
         <div class="card">
             <div class="row align-items-center text-center">
@@ -61,21 +61,19 @@
         </div>
     </div>
 </div>
-<ng-template #noRegister>
-    <div class="auth-wrapper">
-        <div class="auth-content">
-            <div class="card">
-                <div class="row text-center">
-                    <div class="col-md-12">
-                        <h4 class="mb-2 f-w-400">Bạn đã đăng ký cửa hàng rồi!</h4>
-                        <img src="assets/images/box_logo.svg" width="167px" alt="logo" class="img-fluid mb-4" />
-                        <h5>
-                            <i class="fas fa-arrow-left"></i>
-                            <a routerLink="/dashboard"> Back</a>
-                        </h5>
-                    </div>
+<div class="auth-wrapper" *ngIf="isRegisterShop">
+    <div class="auth-content">
+        <div class="card">
+            <div class="row text-center">
+                <div class="col-md-12">
+                    <h4 class="mb-2 f-w-400">Bạn đã đăng ký cửa hàng rồi!</h4>
+                    <img src="assets/images/box_logo.svg" width="167px" alt="logo" class="img-fluid mb-4" />
+                    <h5>
+                        <i class="fas fa-arrow-left"></i>
+                        <a routerLink="/dashboard"> Back</a>
+                    </h5>
                 </div>
             </div>
         </div>
     </div>
-</ng-template>
+</div>
