--- a/src/app/theme/layouts/admin/nav-bar/nav-right/chat-user-list/chat-user-list.component.html
+++ b/src/app/theme/layouts/admin/nav-bar/nav-right/chat-user-list/chat-user-list.component.html
@@ -5,13 +5,14 @@
     </div>
 </div>
 <div class="h-list-body">
-    <a href="javascript:" class="h-close-text" (click)="this.ChatCollapse.emit()"><i
-            class="feather icon-chevrons-right"></i></a>
+    <a href="javascript:" class="h-close-text" (click)="this.ChatCollapse.emit()">
+        <i class="feather icon-chevrons-right"></i>
+    </a>
     <div class="main-friend-cont scroll-div">
         <div class="main-friend-list">
             <ng-scrollbar style="height: calc(100vh - 85px)" visibility="hover">
-                <ng-container *ngFor="let friends of friendsList">
-                    <app-friend (ChatOn)="ChatOn()" [friends]="friends"></app-friend>
+                <ng-container *ngFor="let user of users">
+                    <app-friend (ChatOn)="ChatOn($event)" [friends]="user"></app-friend>
                 </ng-container>
             </ng-scrollbar>
         </div>
