--- a/src/app/theme/layouts/admin/nav-bar/nav-right/chat-user-list/friend/friend.component.html
+++ b/src/app/theme/layouts/admin/nav-bar/nav-right/chat-user-list/friend/friend.component.html
@@ -1,16 +1,16 @@
-<div class="media userlist-box ripple" (click)="innerChatToggle(friends)" [attr.data-id]="friends.id"
-    [attr.data-status]="{ online: friends.status, offline: !friends.status }" [attr.data-username]="friends.name">
-    <a class="media-left" href="javascript:"><img class="media-object img-radius" src="{{ friends.photo }}"
-            alt="{{ friends.name }}" />
-        <div class="live-status" *ngIf="friends.new">{{ friends.new }}</div>
+<div class="media userlist-box ripple" (click)="innerChatToggle(friends)" [attr.data-id]="friends.key"
+    [attr.data-username]="friends.displayName">
+    <a class="media-left" href="javascript:"><img class="media-object img-radius"
+            src="{{ friends.photoURL ? friends.photoURL : 'assets/images/user/avatar-1.jpg'}}"
+            alt="{{ friends.displayName }}" />
     </a>
     <div class="media-body">
         <h6 class="chat-header">
-            {{ friends.name }}
-            <small class="d-block" *ngIf="friends.time"
+            {{ friends.displayName ? friends.displayName : 'Người bí ẩn' }}
+            <!-- <small class="d-block" *ngIf="friends.time"
                 [ngClass]="{ 'text-c-green': friends.status, 'text-c-red': !friends.status }">
                 {{ friends.time }}
-            </small>
+            </small> -->
         </h6>
     </div>
 </div>
