--- a/src/app/theme/layouts/admin/nav-bar/nav-right/nav-right.component.html
+++ b/src/app/theme/layouts/admin/nav-bar/nav-right/nav-right.component.html
@@ -70,15 +70,15 @@
     <li *ngIf="isLoggedIn">
         <div class="dropdown drp-user" ngbDropdown placement="auto">
             <a href="javascript:" ngbDropdownToggle>
-                <img src="{{ (user.photoURL) ? user.photoURL : 'https://lh3.googleusercontent.com/a/ACg8ocKWmSrGjYufaK5Z-qTXfBeewGwG1bRUNdabvHF1a9iBrXk=s96-c' }}"
+                <img src="{{ user?.photoURL || 'https://lh3.googleusercontent.com/a/ACg8ocKWmSrGjYufaK5Z-qTXfBeewGwG1bRUNdabvHF1a9iBrXk=s96-c' }}"
                     class="img-radius" width="40px" height="40px" alt="User-Profile-Image" />
             </a>
             <div class="dropdown-menu dropdown-menu-end profile-notification" ngbDropdownMenu>
                 <div class="pro-head">
-                    <img src="{{ (user.photoURL) ? user.photoURL : 'https://lh3.googleusercontent.com/a/ACg8ocKWmSrGjYufaK5Z-qTXfBeewGwG1bRUNdabvHF1a9iBrXk=s96-c' }}"
+                    <img src="{{ user?.photoURL || 'https://lh3.googleusercontent.com/a/ACg8ocKWmSrGjYufaK5Z-qTXfBeewGwG1bRUNdabvHF1a9iBrXk=s96-c' }}"
                         class="img-radius" alt="User-Profile-Image" />
                     <span>
-                        {{ (user.displayName) ? user.displayName : (user.email.split('@')[0]) }}
+                        {{ user?.displayName || (user?.email.split('@')[0]) }}
                     </span>
                     <a href="javascript:" (click)="signOut()" class="dud-logout" title="Logout">
                         <i class="feather icon-log-out"></i>
