fix tạm scrollbar

--- a/src/app/theme/layouts/admin/nav-bar/nav-right/chat-msg/chat-msg.component.html
+++ b/src/app/theme/layouts/admin/nav-bar/nav-right/chat-msg/chat-msg.component.html
@@ -17,7 +17,7 @@
                 </div>
             </ng-template>
             <ng-container *ngIf="chatMessage; else CHATNOTFOUND">
-                <ng-scrollbar style="height: calc(100vh - 170px)" visibility="hover">
+                <ng-scrollbar #scrollbar style="height: calc(100vh - 170px)" visibility="hover">
                     <div *ngFor="let messages of chatMessage">
                         <div class="media chat-messages">
                             <a *ngIf="messages.senderID" class="media-left photo-table" href="javascript:">
